Added API tests covering creating short URLs with new findIfExists param
